# pillar-dynamic-island-for-windows

./: .gitignore  index.html  package-lock.json  package.json  readme.md  tailwind.config.js
.claude/: settings.local.json
plans/: pillar-improvement-plan.md
scripts/: create-icon.cjs  create-icons.cjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/Pill/: Pill.tsx  animations.ts
src/components/Pill/indicators/: StateIndicators.tsx
src/components/Pill/modules/: AppearanceModule.tsx  BatteryModule.tsx  MediaModule.tsx  NotificationModule.tsx  PerAppMixer.tsx  PrismModule.tsx  TimerModule.tsx  VolumeModule.tsx
src/hooks/: useAppearance.ts  useAudioDevices.ts  useAutoStart.ts  useBattery.ts  useBrightness.ts  useMediaSession.ts  useNotifications.ts  usePerAppMixer.ts  usePillMode.ts  usePillState.ts  usePrismAI.ts  useTimer.ts  useVolume.ts
src/lib/: prismContext.ts  tauri.ts
src/types/: pill.ts  prism.ts
src/utils/: focusTrap.ts
