[package]
name = "pillar"
version = "0.1.0"
description = "Dynamic Island-style system overlay for Windows"
authors = ["you"]
edition = "2021"

[lib]
name = "pillar_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.20"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Windows-only deps (Android builds must not pull these)
[target.'cfg(target_os = "windows")'.dependencies]
# Brightness (WMI on Windows laptops, DDC/CI fallback in our code)
brightness = "0.8"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.58"
features = [
  # Core
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi",
  # Media Session (for now playing info)
  "Media_Control",
  # Audio (for volume control + device enumeration)
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_Devices_Properties",
  # Property Store for device friendly names
  "Win32_UI_Shell_PropertiesSystem",
  # Activate app from notification (IApplicationActivationManager)
  "Win32_UI_Shell",
  "Win32_Devices_FunctionDiscovery",
  # Brightness control (DDC/CI for monitors)
  "Win32_Devices_Display",
  # Async support
  "Foundation",
  "Foundation_Collections",
  "implement",
  # Notifications (includes UserNotification.AppInfo -> need ApplicationModel for DisplayInfo)
  "UI_Notifications",
  "UI_Notifications_Management",
  "ApplicationModel",
]
